--- a/blog.css
+++ b/blog.css
@@ -14,7 +14,7 @@ body {
     /* background: #f8f8f8; */
     /* background-color: #ffffff; */
     /* background-image: url('https://img.freepik.com/free-vector/abstract-smooth-liquid-banner-presentation-backdrop_1017-42992.jpg?w=1060&t=st=1694966685~exp=1694967285~hmac=3c4b101ec7f6640aa70bccaf9db904534fd8102be8886eb50ad54f8ea64c1b0a'); */
-    background-image: url('image/background1.jpg');
+    background-image: url('image/background-cm.jpg');
     background-position: top;
     background-size: 100%;
     background-repeat: no-repeat;
